--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,10 @@
 }
 
 /* Typography */
+::selection {
+  background: var(--color-primary);
+  color: #fff;
+}
 html {
   font-size: 62.5%;
 }
@@ -45,7 +49,9 @@ h2 {
 
 h3 {
   font-size: 3rem;
+  font-weight: 500;
 }
+
 p {
   margin-top: 0;
 }
@@ -106,10 +112,12 @@ a {
   background: var(--color-primary);
   color: #fff;
 }
+
 .badge--secondary {
   background: var(--color-secondary);
   color: #fff;
 }
+
 .badge--small {
   font-size: 1.6rem;
   padding: 0.5rem 1.5rem;
@@ -128,8 +136,8 @@ a {
 .list {
   list-style: none;
   padding-left: 0;
-  color: var(--color-headings);
 }
+
 .list--inline .list__item {
   display: inline-block;
   margin-right: 2rem;
@@ -137,17 +145,20 @@ a {
 .list--tick {
   list-style-image: url(../images/tick.svg);
   padding-left: 3rem;
+  color: var(--color-headings);
 }
 
 .list--tick .list__item {
   padding-left: 0.5rem;
   margin-bottom: 1rem;
 }
+
 @media screen and (min-width: 1024px) {
   .list--tick .list__item {
     padding-left: 0;
   }
 }
+
 /* Icons */
 .icon {
   width: 40px;
@@ -162,6 +173,7 @@ a {
 .icon--primary {
   fill: var(--color-primary);
 }
+
 .icon--white {
   fill: #fff;
 }
@@ -180,8 +192,11 @@ a {
   background: var(--color-accent);
 }
 
-/* Buttons */
+.feature__media .icon {
+  display: block;
+}
 
+/* Buttons */
 .btn {
   border-radius: 40px;
   border: 0;
@@ -195,6 +210,7 @@ a {
   margin: 1rem 0;
   text-align: center;
 }
+
 .btn .icon {
   width: 2rem;
   height: 2rem;
@@ -308,6 +324,7 @@ a {
   background: var(--color-primary);
   color: white;
 }
+
 .card--secondary .card__header {
   background: var(--color-secondary);
   color: white;
@@ -332,6 +349,7 @@ a {
   font-weight: 500;
   font-size: 2.4rem;
 }
+
 .plan__price {
   font-size: 6rem;
 }
@@ -357,6 +375,7 @@ a {
 .plan--popular {
   transform: scale(1.1);
 }
+
 .plan--popular .card__header {
   position: relative;
 }
@@ -373,6 +392,7 @@ a {
 .plan:hover {
   transform: scale(1.05);
 }
+
 .plan--popular:hover {
   transform: scale(1.15);
 }
@@ -395,6 +415,7 @@ a {
 /* Media */
 .media {
   display: flex;
+  margin-bottom: 4rem;
 }
 
 .media__title {
@@ -420,6 +441,7 @@ a {
 .quote__text::before {
   content: open-quote;
 }
+
 .quote__text::after {
   content: close-quote;
 }
@@ -454,6 +476,7 @@ a {
     font-size: 1.6rem;
   }
 }
+
 /* Grids */
 .grid {
   display: grid;
@@ -464,6 +487,7 @@ a {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
 @media screen and (min-width: 1024px) {
   .grid--1x3 {
     grid-template-columns: repeat(3, 1fr);
@@ -496,27 +520,33 @@ a {
     margin-left: 6rem;
   }
 }
+
 /* Callouts */
 .callout {
   padding: 4rem;
   border-radius: 5px;
 }
+
 .callout--primary {
   background: var(--color-primary);
   color: #fff;
 }
+
 .callout__heading {
   color: #fff;
   margin-top: 0;
   font-size: 3rem;
 }
+
 .callout .btn {
   justify-self: center;
   align-self: center;
 }
+
 .callout__content {
   text-align: center;
 }
+
 @media screen and (min-width: 768px) {
   .callout .grid--1x2 {
     grid-template-columns: 1fr auto;
@@ -537,32 +567,39 @@ a {
   display: flex;
   justify-content: space-between;
 }
+
 .collapsible__heading {
   margin-top: 0;
   font-size: 3rem;
 }
+
 .collapsible__chevron {
   transform: rotate(-90deg);
   transition: transform 0.3s;
 }
+
 .collapsible__content {
   max-height: 0;
   overflow: hidden;
   opacity: 0;
   transition: all 0.3s;
 }
+
 .collapsible--expanded .collapsible__chevron {
   transform: rotate(0);
 }
+
 .collapsible--expanded .collapsible__content {
   max-height: 100vh;
   opacity: 1;
 }
+
 /* Blocks */
 .block {
   --padding-vertical: 6rem;
   padding: var(--padding-vertical) 2rem;
 }
+
 .block__header {
   text-align: center;
 }
@@ -570,26 +607,32 @@ a {
 .block__heading {
   margin-top: 0;
 }
+
 .block--dark {
   background: #000;
   color: #7b858b;
 }
-.block--dark .block__heading {
+
+.block--dark h1,
+.block--dark h2,
+.block--dark h3 {
   color: #fff;
 }
 .block--skewed-right {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
 }
+
 .block--skewed-left {
   padding-bottom: calc(var(--padding-vertical) + 4rem);
-  clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
 
 .container {
   max-width: 1140px;
   margin: 0 auto;
 }
+
 /* Navigation Bar */
 .nav {
   background: #000;
@@ -599,14 +642,17 @@ a {
   padding: 0 1rem;
   align-items: center;
 }
+
 .nav__list {
   width: 100%;
   margin: 0;
 }
+
 .nav__item {
   padding: 0.5rem 2rem;
   border-bottom: 1px solid #222;
 }
+
 .nav__item > a {
   color: #d2d0db;
   transition: color 0.3s;
@@ -614,11 +660,13 @@ a {
 .nav__item > a:hover {
   color: #fff;
 }
+
 .nav__toggler {
   opacity: 0.5;
   transition: box-shadow 0.15s;
   cursor: pointer;
 }
+
 .nav.collapsible--expanded .nav__toggler {
   opacity: 1;
   box-shadow: 0 0 0 3px #666;
@@ -633,6 +681,7 @@ a {
   .nav__toggler {
     display: none;
   }
+
   .nav__list {
     width: auto;
     display: flex;
@@ -640,20 +689,20 @@ a {
     max-height: 100%;
     opacity: 1;
   }
+
   .nav__item {
     border: 0;
   }
 }
+
 /* Hero */
-.hero {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
-}
 .hero__tagline {
   font-size: 2rem;
   color: #b9c3cf;
   letter-spacing: 1px;
   margin: 2rem 0 5rem;
 }
+
 .hero__image {
   width: 100%;
 }
@@ -661,11 +710,13 @@ a {
   .hero {
     padding-top: 0;
   }
+
   .hero__content {
     text-align: left;
     align-self: center;
   }
 }
+
 /* Domain Block */
 .block-domain .input-group {
   box-shadow: 0 0 30px 20px #e6ebee;
@@ -673,6 +724,7 @@ a {
   margin: 4rem auto;
   max-width: 670px;
 }
+
 .block-domain__prices {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -683,6 +735,7 @@ a {
   max-width: 700px;
   margin: 0 auto;
 }
+
 @media screen and (min-width: 768px) {
   .block-domain__prices {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
@@ -693,7 +746,50 @@ a {
 .block-plans .grid {
   gap: 8rem 4rem;
 }
+
 .block-plans .card {
   max-width: 500px;
   margin: 0 auto;
+}
+
+/* Feature */
+.feature {
+  gap: 4rem 2rem;
+  margin: 12rem 0;
+}
+
+.feature:first-of-type {
+  margin-top: 6rem;
+}
+
+.feature__heading {
+  margin: 1rem 0;
+}
+
+.feature__image {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .feature:nth-of-type(even) .feature__content {
+    order: 2;
+  }
+}
+
+/* Showcase Block */
+.block-showcase__image > img {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .block-showcase .grid {
+    grid-template-columns: 50% 50%;
+  }
+  .block-showcase__image {
+    justify-self: end;
+  }
+  .block-showcase__image > img {
+    width: auto;
+    max-width: 700px;
+  }
 }
